--- a/lib/layout/settings.css
+++ b/lib/layout/settings.css
@@ -29,13 +29,13 @@
 }
 
 #about .version {
-    width: 400px; 
-    height: 200px; 
-    position: relative; 
-    left: 50%; 
-    top: 50%; 
-    margin-left: -200px; 
-    margin-top: -50px; 
+    width: 400px;
+    height: 200px;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    margin-left: -200px;
+    margin-top: -50px;
     text-align: center;
     font-size: 24px;
     font-weight: bold;
@@ -59,12 +59,19 @@
     display: inline-block;
 }
 
-#settings .groupSlot {
+#settings .groupBatch {
     float: left;
     margin-right: 7px;
     width: 224px;
     height: 410px;
-    
+}
+
+#settings .groupSlot {
+    float: left;
+    margin-right: 7px;
+    width: 222px;
+    height: 410px;
+
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -73,8 +80,15 @@
     overflow: hidden;
 }
 
+#settings .groupBatch .groupSlot {
+    float: none;
+    display: inline-block;
+    height: 200px;
+    margin-bottom: 7px;
+}
+
 #settings .groupSlot .head {
-    width: 224px;
+    width: 222px;
     height: 20px;
     background-color: rgba(0,0,0,0.1);
     text-align: center;
@@ -99,7 +113,7 @@
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     -o-border-radius: 6px;
-    -ms-border-radius: 6px; 
+    -ms-border-radius: 6px;
 }
 
 #settings .user {
@@ -138,7 +152,7 @@
     padding-left: 20px;
     height: 16px;
     display: inline-block;
-    font-size: 10px; 
+    font-size: 10px;
     color: #148cdc;
 }
 
@@ -149,7 +163,7 @@
     padding-left: 20px;
     height: 16px;
     display: inline-block;
-    font-size: 10px; 
+    font-size: 10px;
     color: #999;
 }
 
