--- a/setup/layout/default.css
+++ b/setup/layout/default.css
@@ -5,10 +5,10 @@ html {
 body {
     min-width: 800px;
     min-height: 600px;
-    font-family: helvetica, arial, sans-serif; 
-    font-size: 11px; 
-    line-height: 1.5em; 
-    background-color: #cccccc; 
+    font-family: helvetica, arial, sans-serif;
+    font-size: 11px;
+    line-height: 1.5em;
+    background-color: #cccccc;
     color: black;
     padding: 0px;
     margin: 0px;
@@ -16,15 +16,15 @@ body {
 }
 
 div.appwindow {
-    width: 800px; 
-    height: 600px; 
-    position: relative; 
-    top: 50%; 
-    margin: -300px auto 0 auto; 
+    width: 800px;
+    height: 600px;
+    position: relative;
+    top: 50%;
+    margin: -300px auto 0 auto;
     background-color: white;
 }
 
-div.bottom_navigation {    
+div.bottom_navigation {
     width: 800px;
     height: 64px;
     background-color: #eee;
@@ -116,7 +116,7 @@ div.bottom_navigation {
 
 .button_back:hover {
     background-color: #ddd;
-    box-shadow: 2px 2px 6px #999;    
+    box-shadow: 2px 2px 6px #999;
 }
 
 .button_back:active {
@@ -143,7 +143,7 @@ div.bottom_navigation {
 
 .button_next:hover {
     background-color: #0c7;
-    box-shadow: 2px 2px 6px #999;    
+    box-shadow: 2px 2px 6px #999;
 }
 
 .button_next:active {
@@ -323,6 +323,81 @@ button.clear:hover {
     display: inline-block;
 }
 
+.config .groups {
+    width: 350px;
+    height: 100px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    border: 1px solid #ccc;
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
+.config .group {
+    width: 350px;
+    border-bottom: 1px solid #ddd;
+}
+
+.config .group_name {
+    width: 215px;
+    max-width: 215px;
+    display: inline-block;
+}
+
+.config .group_map {
+    width: 18px;
+    display: inline-block;
+    margin-left: 5px;
+}
+
+.config .map_head {
+    width: 21px;
+    height: 21px;
+    margin-left: 5px;
+    display: inline-block;
+    opacity: 0.3;
+}
+
+.config .tooltip:hover .map_head {
+    opacity: 1.0;
+}
+
+.config .name_head {
+    width: 220px;
+    display: inline-block;
+}
+
+.config .tooltip {
+    display: inline-block;
+    position: relative;
+}
+
+.config .tooltip span {
+    display: none;
+}
+
+.config .tooltip:hover span {
+    display: block;
+    position: absolute;
+    top: 25px;
+    left: 6px;
+    padding:2px 6px;
+    background-color: #ddd;
+    opacity: 1.0;
+
+    box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.2);
+    -moz-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.2);
+    -o-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.2);
+    -ms-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.2);
+
+    border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -o-border-radius: 2px;
+    -ms-border-radius: 2px;
+}
+
 #error {
     width: 90%;
     height: 90%;
@@ -333,8 +408,8 @@ button.clear:hover {
     border: 1px solid black;
     padding: 6px;
     overflow-y: scroll;
-    
-    -moz-border-radius: 4px; 
+
+    -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
 }
